--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                             <span
                                 class="inline-flex items-center gap-2 rounded-full bg-white/10 px-3 py-1 text-xs sm:text-sm font-bold text-white ring-1 ring-white/15">
                                 <i class="fa-solid fa-location-dot text-[#FF8A00]"></i>
-                                Puno, Perú
+                                Virtual
                             </span>
                         </div>
 
