--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description"
-        content="Curso Taller CEPREUNA - Desarrollo Cognitivo. Inscripción y validación de voucher en línea." />
+        content="Curso CEPREUNA - Desarrollo Cognitivo. Inscripción y validación de voucher en línea." />
     <meta name="author" content="CEPREUNA" />
 
     <title></title>
@@ -111,7 +111,7 @@
                         alt="Logo CEPREUNA" />
                     <div class="leading-tight">
                         <div class="text-base font-bold text-slate-900">CEPREUNA</div>
-                        <div class="text-sm text-slate-600">Curso Taller</div>
+                        <div class="text-sm text-slate-600">Curso</div>
                     </div>
                 </a>
 
@@ -182,7 +182,7 @@
                         <span
                             class="inline-flex items-center gap-2 rounded-full bg-white/10 px-3 py-1 text-sm font-semibold text-white ring-1 ring-white/15">
                             <i class="fa-solid fa-graduation-cap"></i>
-                            Curso Taller
+                            Curso
                         </span>
                         <span
                             class="inline-flex items-center gap-2 rounded-full bg-white/10 px-3 py-1 text-sm font-semibold text-white ring-1 ring-white/15">
@@ -204,7 +204,7 @@
                     <!-- Título ligeramente más compacto en desktop -->
                     <h1
                         class="mt-4 text-4xl sm:text-5xl lg:text-[3.15rem] leading-[1.02] font-extrabold tracking-tight text-white">
-                        CURSO TALLER:
+                        CURSO:
                     </h1>
 
                     <p class="mt-3 text-base sm:text-lg leading-relaxed text-white/85 font-body">
@@ -533,7 +533,7 @@
             <div class="mt-10 grid gap-6 lg:grid-cols-12 lg:items-start">
                 <div class="reveal lg:col-span-7 rounded-3xl bg-white/8 ring-1 ring-white/15 p-6 sm:p-7 shadow-soft2">
                     <p class="text-base sm:text-lg text-white/85 font-body leading-relaxed">
-                        El Curso Taller: “capacitación en la construcción de
+                        El Curso: “capacitación en la construcción de
                         herramientas de evaluación de preparación pre universitaria y enseñanza-aprendizaje”
                         es una iniciativa del Centro de Estudios Preuniversitario de la Universidad Nacional del
                         Altiplano - CEPREUNA,
