--- a/index.html
+++ b/index.html
@@ -226,6 +226,12 @@
                             <i class="fa-solid fa-users"></i>
                             Ver ponentes
                         </a>
+
+                        <a
+                            class="inline-flex items-center justify-center gap-2 rounded-xl bg-white/9 px-6 py-3 text-sm sm:text-base font-bold text-white ring-1 ring-white/20 transition">
+                            <i class="fa-solid fa-calendar-days"></i>
+                            Del 20 - 21 Febrero
+                        </a>
                     </div>
 
                     <!-- ✅ CONTADOR: D/H/M/S pero en formato bajo -->
