--- a/index.html
+++ b/index.html
@@ -582,6 +582,131 @@
         </div>
     </section>
 
+    <section id="inversion" class="relative py-14 sm:py-16">
+        <!-- fondo sutil -->
+        <div class="absolute inset-0 -z-10" aria-hidden="true">
+            <div class="absolute inset-0 bg-white"></div>
+            <div class="absolute -top-10 left-0 h-48 w-48 rounded-full bg-[#00A9C8]/10 blur-2xl"></div>
+            <div class="absolute -bottom-10 right-0 h-56 w-56 rounded-full bg-[#FF8A00]/10 blur-2xl"></div>
+        </div>
+
+        <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
+            <div class="flex flex-col gap-8 lg:grid lg:grid-cols-12 lg:items-start">
+                <!-- Texto -->
+                <div class="lg:col-span-7">
+                    <div
+                        class="inline-flex items-center gap-2 rounded-full bg-[#0B2E66]/5 px-4 py-2 ring-1 ring-[#0B2E66]/10">
+                        <i class="fa-solid fa-circle-check text-[#00A9C8]" aria-hidden="true"></i>
+                        <span class="text-sm font-extrabold text-[#0B2E66]">Inversión</span>
+                    </div>
+
+                    <h2 class="mt-4 text-3xl sm:text-4xl font-extrabold tracking-tight text-slate-900">
+                        Inversión <span class="text-[#0B2E66]">S/ 41.00</span>
+                    </h2>
+
+                    <p class="mt-3 text-base sm:text-lg leading-relaxed text-slate-700 font-body">
+                        Pago en el <strong class="text-slate-900">Banco de la Nación</strong> o
+                        <strong class="text-slate-900">pagalo.pe</strong> a Tasas Educativas de la
+                        <strong class="text-slate-900">Universidad Nacional del Altiplano</strong> al código
+                        <strong class="text-slate-900">67 Cepreuna</strong>.
+                    </p>
+
+                    <div class="mt-6 grid gap-3 sm:grid-cols-2">
+                        <div class="rounded-2xl border border-slate-200 bg-white p-4 shadow-sm">
+                            <div class="flex items-start gap-3">
+                                <span
+                                    class="mt-0.5 inline-flex h-9 w-9 items-center justify-center rounded-xl bg-[#00A9C8]/10 text-[#00A9C8]">
+                                    <i class="fa-solid fa-building-columns" aria-hidden="true"></i>
+                                </span>
+                                <div>
+                                    <p class="font-extrabold text-slate-900">Banco de la Nación</p>
+                                    <p class="text-sm text-slate-600 font-body">Tasas Educativas • Código
+                                        <strong>67</strong>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="rounded-2xl border border-slate-200 bg-white p-4 shadow-sm">
+                            <div class="flex items-start gap-3">
+                                <span
+                                    class="mt-0.5 inline-flex h-9 w-9 items-center justify-center rounded-xl bg-[#FF8A00]/10 text-[#FF8A00]">
+                                    <i class="fa-solid fa-globe" aria-hidden="true"></i>
+                                </span>
+                                <div>
+                                    <p class="font-extrabold text-slate-900">pagalo.pe</p>
+                                    <p class="text-sm text-slate-600 font-body">Selecciona UNAP • Código
+                                        <strong>67</strong>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="mt-5 rounded-2xl bg-[#0B2E66]/5 ring-1 ring-[#0B2E66]/10 p-4">
+                        <div class="flex items-start gap-3">
+                            <span
+                                class="mt-0.5 inline-flex h-9 w-9 items-center justify-center rounded-xl bg-white text-[#0B2E66] ring-1 ring-[#0B2E66]/10">
+                                <i class="fa-solid fa-id-card" aria-hidden="true"></i>
+                            </span>
+                            <div>
+                                <p class="font-extrabold text-slate-900">Datos requeridos</p>
+                                <p class="text-sm text-slate-700 font-body">
+                                    Con <strong>DNI</strong> y <strong>nombres del docente participante</strong>.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Card derecha (resumen) -->
+                <aside class="lg:col-span-5">
+                    <div class="rounded-3xl bg-white shadow-soft2 ring-1 ring-slate-200 overflow-hidden">
+                        <div class="px-6 py-5 bg-gradient-to-r from-[#0B2E66] to-[#00152C]">
+                            <p class="text-white/80 text-sm font-semibold">Resumen de pago</p>
+                            <div class="mt-1 flex items-end justify-between gap-3">
+                                <p class="text-white text-xl sm:text-2xl font-extrabold">Inversión</p>
+                                <p class="text-white text-2xl sm:text-3xl font-extrabold tabular-nums">S/ 41.00</p>
+                            </div>
+                        </div>
+
+                        <div class="p-6">
+                            <ul class="space-y-3 text-sm text-slate-700 font-body">
+                                <li class="flex gap-3">
+                                    <i class="fa-solid fa-hashtag mt-0.5 text-[#00A9C8]" aria-hidden="true"></i>
+                                    <span>Código: <strong class="text-slate-900">67 Cepreuna</strong></span>
+                                </li>
+                                <li class="flex gap-3">
+                                    <i class="fa-solid fa-receipt mt-0.5 text-[#FF8A00]" aria-hidden="true"></i>
+                                    <span>Guarda tu constancia/voucher para validación.</span>
+                                </li>
+                                <li class="flex gap-3">
+                                    <i class="fa-solid fa-user-check mt-0.5 text-[#0B2E66]" aria-hidden="true"></i>
+                                    <span>Registra <strong class="text-slate-900">DNI</strong> y <strong
+                                            class="text-slate-900">nombres</strong> del docente.</span>
+                                </li>
+                            </ul>
+
+                            <div class="mt-9 flex flex-col sm:flex-row gap-3">
+                                <a href="#inscribirse"
+                                    class="inline-flex w-full items-center justify-center gap-2 rounded-xl bg-[#FF8A00] px-5 py-3 text-sm font-extrabold text-white shadow-soft hover:brightness-110 transition
+                        focus:outline-none focus-visible:ring-4 focus-visible:ring-[#FF8A00]/30 focus-visible:ring-offset-2">
+                                    <i class="fa-solid fa-pen-to-square" aria-hidden="true"></i>
+                                    Ir a inscripción
+                                </a>
+                            </div>
+
+                            <p class="mt-4 text-xs text-slate-500 font-body">
+                                * El código y datos deben coincidir con el pago para validar correctamente.
+                            </p>
+                        </div>
+                    </div>
+                </aside>
+            </div>
+        </div>
+    </section>
+
+
     <!-- INSCRIPCIÓN -->
     <section id="inscribirse" class="relative overflow-hidden py-16 sm:py-20">
         <div class="absolute inset-0 -z-10" style="
