--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
                                 <img src="./img/curso-taller2025/img/logo-white-cepre2025.png" alt="Logo CEPREUNA"
                                     class="h-12 w-auto object-contain reduce-motion animate-floaty" />
                                 <div class="text-white">
-                                    <div class="text-sm font-semibold text-white/80">Centro de Estudios</div>
+                                    <div class="text-sm font-semibold text-white/80">Centro Preuniversitario</div>
                                     <div class="text-lg font-extrabold leading-none">CEPREUNA</div>
                                 </div>
                             </div>
@@ -342,7 +342,7 @@
                             <div class="flex items-start gap-3">
                                 <div class="mt-1 text-[#00A9C8]"><i class="fa-solid fa-circle-info"></i></div>
                                 <div class="text-white/90 font-body text-sm sm:text-[15px] leading-relaxed">
-                                    Este taller cuenta con <strong class="text-white">cupos limitados</strong>. No dejes
+                                    Este curso cuenta con <strong class="text-white">cupos limitados</strong>. No dejes
                                     pasar la oportunidad de participar.
                                 </div>
                             </div>
@@ -541,7 +541,7 @@
                     <p class="text-base sm:text-lg text-white/85 font-body leading-relaxed">
                         El Curso: “capacitación en la construcción de
                         herramientas de evaluación de preparación pre universitaria y enseñanza-aprendizaje”
-                        es una iniciativa del Centro de Estudios Preuniversitario de la Universidad Nacional del
+                        es una iniciativa del Centro Preuniversitario de la Universidad Nacional del
                         Altiplano - CEPREUNA,
                         dirigida a docentes de preparación preuniversitaria en Puno.
                     </p>
@@ -1167,7 +1167,7 @@
                 <div>
                     <h4 class="text-lg font-extrabold">Acerca del CEPREUNA</h4>
                     <p class="mt-3 text-white/80 font-body">
-                        CEPREUNA es el Centro de Estudios Preuniversitarios de la Universidad Nacional del Altiplano,
+                        CEPREUNA es el Centro Preuniversitario de la Universidad Nacional del Altiplano,
                         brindando preparación preuniversitaria a jóvenes de Puno y otras regiones.
                     </p>
                 </div>
