--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
                     <p class="text-base sm:text-lg text-white/85 font-body leading-relaxed">
                         El Curso: “capacitación en la construcción de
                         herramientas de evaluación de preparación pre universitaria y enseñanza-aprendizaje”
-                        es una iniciativa del Centro Preuniversitario de la Universidad Nacional del
+                        es una iniciativa del Centro de Estudios Preuniversitario de la Universidad Nacional del
                         Altiplano - CEPREUNA,
                         dirigida a docentes de preparación preuniversitaria en Puno.
                     </p>
@@ -1167,7 +1167,7 @@
                 <div>
                     <h4 class="text-lg font-extrabold">Acerca del CEPREUNA</h4>
                     <p class="mt-3 text-white/80 font-body">
-                        CEPREUNA es el Centro Preuniversitario de la Universidad Nacional del Altiplano,
+                        CEPREUNA es el Centro de Estudios Preuniversitario de la Universidad Nacional del Altiplano,
                         brindando preparación preuniversitaria a jóvenes de Puno y otras regiones.
                     </p>
                 </div>
