--- a/index.html
+++ b/index.html
@@ -307,6 +307,12 @@
                             <div class="text-sm text-white/80 font-body">Registra tus datos y valida tu voucher.</div>
                         </div>
                         <div class="rounded-2xl bg-white/8 ring-1 ring-white/15 p-3">
+                            <div class="text-white font-bold">Último día de pago: 18 de febrero</div>
+                            <div class="text-sm text-white/80 font-body">La inscripción podras realizarlo 24 horas
+                                después
+                                de efectuado el pago.</div>
+                        </div>
+                        <div class="rounded-2xl bg-white/8 ring-1 ring-white/15 p-3">
                             <div class="text-white font-bold">Validación segura</div>
                             <div class="text-sm text-white/80 font-body">Por secuencia, fecha y monto.</div>
                         </div>
