--- a/index.html
+++ b/index.html
@@ -308,9 +308,8 @@
                         </div>
                         <div class="rounded-2xl bg-white/8 ring-1 ring-white/15 p-3">
                             <div class="text-white font-bold">Último día de pago: 18 de febrero</div>
-                            <div class="text-sm text-white/80 font-body">La inscripción podras realizarlo 24 horas
-                                después
-                                de efectuado el pago.</div>
+                            <div class="text-sm text-white/80 font-body">Podrás inscribirte 24 horas después de realizar
+                                el pago.</div>
                         </div>
                         <div class="rounded-2xl bg-white/8 ring-1 ring-white/15 p-3">
                             <div class="text-white font-bold">Validación segura</div>
