--- a/index.html
+++ b/index.html
@@ -544,11 +544,11 @@
             <div class="mt-10 grid gap-6 lg:grid-cols-12 lg:items-start">
                 <div class="reveal lg:col-span-7 rounded-3xl bg-white/8 ring-1 ring-white/15 p-6 sm:p-7 shadow-soft2">
                     <p class="text-base sm:text-lg text-white/85 font-body leading-relaxed">
-                        El Curso: “capacitación en la construcción de
+                        El Curso: “Capacitación en la construcción de
                         herramientas de evaluación de preparación preuniversitaria y enseñanza-aprendizaje”
                         es una iniciativa del Centro de Estudios Preuniversitario de la Universidad Nacional del
                         Altiplano - CEPREUNA,
-                        dirigida a docentes de preparación preuniversitaria en Puno.
+                        dirigida a docentes de preparación preuniversitaria.
                     </p>
                     <p class="mt-4 text-base sm:text-lg text-white/85 font-body leading-relaxed">
                         Fortalecer las competencias pedagógicas de los docentes mediante el uso adecuado y efectivo de
