--- a/index.html
+++ b/index.html
@@ -359,8 +359,8 @@
                                 <div class="text-base font-extrabold text-white">Docentes</div>
                             </div>
                             <div class="rounded-2xl bg-white/10 ring-1 ring-white/15 p-4 text-center">
-                                <div class="text-xs text-white/70">Región</div>
-                                <div class="text-base font-extrabold text-white">Puno</div>
+                                <div class="text-xs text-white/70">Modalidad</div>
+                                <div class="text-base font-extrabold text-white">Virtual</div>
                             </div>
                         </div>
                     </div>
