--- a/index.html
+++ b/index.html
@@ -747,6 +747,10 @@
                             <span class="mt-1 text-brand-orange"><i class="fa-solid fa-3"></i></span>
                             <span><strong class="text-white">Paso 3:</strong> Envía tu inscripción.</span>
                         </li>
+                        <li class="flex gap-3">
+                            <span class="mt-1 text-brand-orange"><i class="fa-solid fa-4"></i></span>
+                            <span><strong class="text-white">Paso 4:</strong> Descarga tu ficha inscripción.</span>
+                        </li>
                     </ol>
 
                     <div class="mt-6 rounded-2xl bg-white/10 ring-1 ring-white/15 p-4 text-sm text-white/85 font-body">
