--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
                     <div class="leading-tight">
                         <div class="text-lg sm:text-xl font-extrabold text-slate-900 tracking-tight">CEPREUNA</div>
-                        <div class="text-sm sm:text-base text-slate-600 font-medium">Curso Taller</div>
+                        <div class="text-sm sm:text-base text-slate-600 font-medium">Curso</div>
                     </div>
                 </a>
 
